api-ui/templates/np-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-npservice
  labels:
    app: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
      nodePort: 31000
