api-ui/templates/np-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-npservice
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31005
  type: NodePort
