api-ui/templates/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui  
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
